--- a/index.html
+++ b/index.html
@@ -5,14 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
+    <link rel="stylesheet" href="/styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+    <div id="navbarSection" class="rowPadding">
+      <img src="/images/spotify-logo.png" alt="spotify logo">
+      <nav>
+        <a href="#">Premium</a>
+        <a href="#">Discover</a>
+        <a href="#">Help</a>
+        <a href="#">Download</a>
+      </nav>  
+    </div>
+    <div id="bannerSection">
+      <h1>Music for everyone.</h1>
+      <p>Spotify is now free on mobile, tablet and computer. Listen to the
+        right music, wherever you are.</p>
+    </div>
+    <div id="advantagesSection" class="rowPadding">
+      <h2 class="borderBottom">What’s on Spotify?</h2>
+      <div id="advantages-items">
+        <div class="adv-item">
+          <img src="/images/music-icon.png" alt="speaker icon">
+          <p class="adv-title">Millions of songs</p>
+          <p class="adv-body">There are millions of songs on Spotify</p>
+        </div>
+        <div class="adv-item">
+          <img src="/images/high-quality-icon.png" alt="music waves icon">
+          <p class="adv-title">HD Music</p>
+          <p class="adv-body">Listen to music as if you were listening live</p>
+        </div>
+        <div class="adv-item">
+          <img src="/images/devices-icon.png" alt="devices icon">
+          <p class="adv-title">Stream Everywhere</p>
+          <p class="adv-body">Stream music on your smartphone, tablet or computer</p>
+        </div>
+      </div>
+    </div>
+    <div id="actionsSection" class="rowPadding">
+      <div class="body">  
+        <h2 class="borderBottom">It’s as yeezy as Kanye West.</h2>
+        <div class="action-item">
+          <h3>Search</h3>
+          <p>Know what you want to listen to? Just search and hit play.</p>
+        </div>
+        <div class="action-item">
+          <h3>Browse</h3>
+          <p>Check out the latest charts, brand new releases and great playlists for right now.</p>
+        </div>
+        <div class="action-item">
+          <h3>Discover</h3>
+          <p>Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio.</p>
+        </div>
+      </div>
+      <img src="/images/spotify-icon-white.png" alt="spotify icon white">
+      <img src="/images/spotify-app.jpg" alt="spotify app">
+    </div>
   </body>
 </html>
