index & style done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <div id="navbarSection" class="rowPadding">
-      <img src="/images/spotify-logo.png" alt="spotify logo">
+      <a href="#" id="spotifyHome">
+        <img src="/images/spotify-logo.png" alt="spotify logo">
+      </a>
       <nav>
         <a href="#">Premium</a>
         <a href="#">Discover</a>
@@ -19,16 +21,18 @@
       </nav>  
     </div>
     <div id="bannerSection">
-      <h1>Music for everyone.</h1>
-      <p>Spotify is now free on mobile, tablet and computer. Listen to the
+      <div>
+        <h1>Music for everyone.</h1>
+        <p>Spotify is now free on mobile, tablet and computer. Listen to the
         right music, wherever you are.</p>
+      </div>
     </div>
     <div id="advantagesSection" class="rowPadding">
       <h2 class="borderBottom">What’s on Spotify?</h2>
       <div id="advantages-items">
         <div class="adv-item">
           <img src="/images/music-icon.png" alt="speaker icon">
-          <p class="adv-title">Millions of songs</p>
+          <p class="adv-title">Millions of Songs</p>
           <p class="adv-body">There are millions of songs on Spotify</p>
         </div>
         <div class="adv-item">
@@ -44,7 +48,7 @@
       </div>
     </div>
     <div id="actionsSection" class="rowPadding">
-      <div class="body">  
+      <div id="left-text">  
         <h2 class="borderBottom">It’s as yeezy as Kanye West.</h2>
         <div class="action-item">
           <h3>Search</h3>
@@ -59,8 +63,10 @@
           <p>Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio.</p>
         </div>
       </div>
-      <img src="/images/spotify-icon-white.png" alt="spotify icon white">
-      <img src="/images/spotify-app.jpg" alt="spotify app">
+      <img id="spotifyLogo" src="/images/spotify-icon-white.png" alt="spotify icon white">
+      <div>
+        <img id="spotifyApp" src="/images/spotify-app.jpg" alt="spotify app">
+      </div>
     </div>
   </body>
 </html>
